--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,3 +22,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.image-form {
+  text-align: center;
+  margin-top: 20px;
+}
